--- a/Sopra/WebContent/benutzerdatenAendern.xhtml
+++ b/Sopra/WebContent/benutzerdatenAendern.xhtml
@@ -23,7 +23,7 @@
 					<h:panelGroup layout="block" styleClass = "benutzerdatenAendern">
 						<h:form>
 							<h:panelGroup styleClass="text-infoBenutzerAendern ueberschriftAufzaehlung">altes Passwort:</h:panelGroup>
-							<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAendern"><h:inputSecret value="#{benutzerAendernBean.altespasswort}"></h:inputSecret></h:panelGroup>
+							<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAendern"><h:inputSecret value="#{benutzerAendernBean.altespasswortEingabe}"></h:inputSecret></h:panelGroup>
 							<br class="naechsteZeile"/>
 							<h:panelGroup styleClass="text-infoBenutzerAendern ueberschriftAufzaehlung">neues Passwort:</h:panelGroup>
 							<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAendern"><h:inputSecret value="#{benutzerAendernBean.neuespasswort}"></h:inputSecret></h:panelGroup>
