--- a/Sopra/WebContent/suchergebnis.xhtml
+++ b/Sopra/WebContent/suchergebnis.xhtml
@@ -19,7 +19,7 @@
 					headerClass="order-table-header"
 					rowClasses="order-table-odd-row,order-table-even-row">
 <!-- eventuell muss man dann schauen wenn man die Tabelle füllt, dass man in der css datei  
- die auskommentierten zeilen wieder rein kommentiert AUTOR:Angelina -->
+ die auskommentierten zeilen wieder rein kommentiert-->
 
 					<h:column>
 						<!-- column header -->
