--- a/Sopra/WebContent/modulUebernehmen.xhtml
+++ b/Sopra/WebContent/modulUebernehmen.xhtml
@@ -7,37 +7,44 @@
 	xmlns:f="http://java.sun.com/jsf/core">
 
 <ui:composition template="/WEB-INF/templates/BasicTemplate.xhtml">
-	
+
 	<ui:define name="seitenbereich">
-	   		<h:panelGroup layout="block" styleClass = "seitenbereich">
-			<h:panelGroup layout="block" styleClass = "hauptfenster">
-				<h1 class = "ueberschrift">Modul &uuml;bernehmen</h1>
+		<h:panelGroup layout="block" styleClass="seitenbereich">
+			<h:panelGroup layout="block" styleClass="hauptfenster">
+				<h1 class="ueberschrift">Modul &uuml;bernehmen</h1>
 				<p>Modulauswahl:</p>
-				
-				 <h:panelGroup layout="block" styleClass = "benutzerAnlegen" rendered="#{userBean.myself.rolle!=2}">
-							<h1>No Freigabeberechtigter / Studiendekan, no Permission!!</h1>
-							<br class="naechsteZeile"/>
-							<h6>MWTBDLTR</h6>
-				</h:panelGroup>
-				
-				<h:panelGroup layout="block" styleClass="top-nav" rendered="#{userBean.myself.rolle==2}">
-					<h:panelGroup layout="block" styleClass = "loeschen"> 
-						<h:form>
-							<h:selectManyCheckbox id="fehler" required="true" readonly="false" 
-								requiredMessage="w&auml;hle mindenstens ein Modul aus" layout="pageDirection" styleClass="ueberschriftAufzaehlung">
-	   							<f:selectItems />
-	   						</h:selectManyCheckbox>
-	   						<h:message for="fehler" styleClass="error"/>
-	   						<br />
-		   					<br class="naechsteZeile2"/>	
-							<h:commandButton value="&Uuml;bernehmen"  styleClass = "buttonAnordnung"/>
-							<h:button value="Abbrechen" outcome="login"/>
-						</h:form>
+				<h:panelGroup layout="block" styleClass="top-nav">
+
+					<h:panelGroup layout="block" styleClass="benutzerAnlegen warnungen"
+						rendered="#{userBean.myself.rolle!=2}">
+						<h1>No Freigabeberechtigter / Studiendekan, no Permission!!</h1>
+						<br class="naechsteZeile" />
+						<h6>MWTBDLTR</h6>
+					</h:panelGroup>
+
+					<h:panelGroup layout="block" styleClass="top-nav"
+						rendered="#{userBean.myself.rolle==2}">
+						<h:panelGroup layout="block" styleClass="loeschen">
+							<h:form>
+								<h:selectManyCheckbox id="fehler" required="true"
+									readonly="false"
+									requiredMessage="w&auml;hle mindenstens ein Modul aus"
+									layout="pageDirection" styleClass="ueberschriftAufzaehlung">
+									<f:selectItems />
+								</h:selectManyCheckbox>
+								<h:message for="fehler" styleClass="error" />
+								<br />
+								<br class="naechsteZeile2" />
+								<h:commandButton value="&Uuml;bernehmen"
+									styleClass="buttonAnordnung" />
+								<h:button value="Abbrechen" outcome="login" />
+							</h:form>
+						</h:panelGroup>
 					</h:panelGroup>
 				</h:panelGroup>
 			</h:panelGroup>
 		</h:panelGroup>
 	</ui:define>
-	
+
 </ui:composition>
 </html>
