--- a/Sopra/WebContent/modulWeiterleiten.xhtml
+++ b/Sopra/WebContent/modulWeiterleiten.xhtml
@@ -15,7 +15,7 @@
 				<h:panelGroup layout="block" styleClass="top-nav">
 				
 				
-				<h:panelGroup layout="block" styleClass = "benutzerAnlegen" rendered="#{userBean.myself.rolle!=2}">
+				<h:panelGroup layout="block" styleClass = "benutzerAnlegen warnungen" rendered="#{userBean.myself.rolle!=2}">
 							<h1>No Freigabeberechtigter / Studiendekan, no Permission!!</h1>
 							<br class="naechsteZeile"/>
 							<h6>MWTBDLTR</h6>
