--- a/Sopra/WebContent/modulansicht.xhtml
+++ b/Sopra/WebContent/modulansicht.xhtml
@@ -15,91 +15,91 @@
 					<h:panelGroup layout="block" styleClass = "modulErstellen">
 					<h:form>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Modulname:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText></h:outputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText value="#{baumstrukturBean.selectedNode.data.modulname}"></h:outputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Code:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText></h:outputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText value="#{baumstrukturBean.selectedNode.data.code}"></h:outputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Arbeitsaufwand:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText></h:outputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText value="#{baumstrukturBean.selectedNode.data.arbeitsaufwand}"></h:outputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Voraussetzungen f&uuml;r:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText></h:outputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText value="#{baumstrukturBean.selectedNode.data.voraussetzungenfor}"></h:outputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Voraussetzungen In:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText></h:outputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText value="#{baumstrukturBean.selectedNode.data.voraussetzungenin}"></h:outputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Dauer:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText></h:outputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText value="#{baumstrukturBean.selectedNode.data.dauer}"></h:outputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Wochenstunden:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText></h:outputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText value="#{baumstrukturBean.selectedNode.data.wochenstunden}"></h:outputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Turnus:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText></h:outputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText value="#{baumstrukturBean.selectedNode.data.turnus}"></h:outputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Dezernat:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText></h:outputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText value="#{baumstrukturBean.selectedNode.data.dezernat}"></h:outputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Dozenten:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText></h:outputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText value="#{baumstrukturBean.selectedNode.data.dozenten}"></h:outputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Einordnung:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText></h:outputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText value="#{baumstrukturBean.selectedNode.data.einordnung}"></h:outputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Englisch:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText></h:outputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText value="#{baumstrukturBean.selectedNode.data.englisch}"></h:outputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Grundlage f&uuml;r:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText></h:outputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText value="#{baumstrukturBean.selectedNode.data.grundlagefuer}"></h:outputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Inhalt:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText></h:outputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText value="#{baumstrukturBean.selectedNode.data.inhalt}"></h:outputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Lehrformen:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText></h:outputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText value="#{baumstrukturBean.selectedNode.data.lehrformen}"></h:outputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Leistungsnachweis:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText></h:outputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText value="#{baumstrukturBean.selectedNode.data.leistungsnachweis}"></h:outputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Leistungspunkte:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText></h:outputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText value="#{baumstrukturBean.selectedNode.data.leistungspunkte}"></h:outputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Lernziele:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText></h:outputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText value="#{baumstrukturBean.selectedNode.data.lernziele}"></h:outputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Literatur:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText></h:outputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText value="#{baumstrukturBean.selectedNode.data.literatur}"></h:outputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Modulverantwortlicher:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText></h:outputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText value="#{baumstrukturBean.selectedNode.data.modulverantwortlicher}"></h:outputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Notenbildung:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText></h:outputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText value="#{baumstrukturBean.selectedNode.data.notenbildung}"></h:outputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Sprache:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText ></h:outputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:outputText value="#{baumstrukturBean.selectedNode.data.sprache}"></h:outputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
