--- a/Sopra/WebContent/login.xhtml
+++ b/Sopra/WebContent/login.xhtml
@@ -22,15 +22,19 @@
 							<p:outputLabel value="#{node}" id="lblNode"
 								styleClass="baumaufbau"></p:outputLabel>
 						</p:treeNode>
+						<p:treeNode type="fach_type">
+							<p:outputLabel value="#{node.fach}" id="lblNode2"
+								styleClass="baumaufbau"></p:outputLabel>
+						</p:treeNode>
 						<p:treeNode type="hb_type">
-							<p:outputLabel value="Version vom #{node.zeitstempel}" id="lblNode2"
+							<p:outputLabel value="Version vom #{node.zeitstempel}" id="lblNode3"
 								styleClass="baumaufbau"></p:outputLabel>
 								<h:link outcome="login">
 									<p:graphicImage value="/resources/images/PDF_Logo.png" style=" margin-left: 15px; margin-right: 15px;"/>								
 								</h:link>
 						</p:treeNode>
 						<p:treeNode type="modul_type">
-							<p:outputLabel value="#{node.modulname}" id="lblNode3"
+							<p:outputLabel value="#{node.modulname}" id="lblNode4"
 								styleClass="baumaufbau"></p:outputLabel>
 								<h:link outcome="modulansicht">
 									<p:graphicImage value="/resources/images/html_logo.png" style=" margin-left: 15px; margin-right: 15px;"/>								
