--- a/Sopra/WebContent/loeschverwaltungStudiendekan.xhtml
+++ b/Sopra/WebContent/loeschverwaltungStudiendekan.xhtml
@@ -15,7 +15,7 @@
 				<h:panelGroup layout="block" styleClass="top-nav">
 					<h:panelGroup layout="block" styleClass="benutzerAnlegen warnungen"
 						rendered="#{userBean.myself.rolle!=2}">
-						<h1>No Admin, no Permission!!</h1>
+						<h1>No Studiendekan, no Permission!!</h1>
 						<br class="naechsteZeile" />
 						<h6>MWTBDLTR</h6>
 					</h:panelGroup>
